

add_subdirectory(data-structures)










# add_library(src-lib "")

# file(GLOB src-lib-cpp CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/*.cpp")
# file(GLOB src-lib-h CONFIGURE_DEPENDS "${CMAKE_CURRENT_LIST_DIR}/include/*.hpp")


# target_sources(src-lib
#   PRIVATE ${src-lib-cpp}
#   PUBLIC ${src-lib-h}
#   )

# target_include_directories(src-lib PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include )
# add_subdirectory(test)